# terminals

./: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.controller  Dockerfile.orchestrator  LICENSE  README.md  dev.sh  pyproject.toml
.github/workflows/: docker-build.yml
docs/: openshift.md
kubernetes-controller/: app.py  config.py  controller.py  k8s.py
manifests/: crd.yaml  operator-deployment.yaml  rbac.yaml  sandbox-rbac.yaml  terminal-crd.yaml
operator/: handler.py
terminals/: cli.py  config.py  logging.py  main.py  middleware.py
terminals/backends/: __init__.py  base.py  docker.py  kubernetes.py  kubernetes_operator.py  kubernetes_sandbox.py
terminals/db/: session.py
terminals/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
terminals/frontend/src/: app.css  app.html
terminals/frontend/src/routes/: +page.svelte
terminals/migrations/: env.py
terminals/migrations/versions/: 001_initial.py  002_policy_lifecycles.py
terminals/models/: policy.py
terminals/routers/: auth.py  instances.py  lifecycle.py  policy.py  proxy.py
terminals/utils/: env.py  kubernetes_scheduling.py  kubernetes_security.py  parsing.py  policy_lifecycle.py  policy_specs.py
tests/: test_kubernetes_sandbox.py  test_kubernetes_scheduling.py  test_middleware.py  test_proxy_clients.py  test_status_cache.py  test_token_cache.py
